# Vesicle-Diffusion

./: CMakeLists.txt  Cell.h  Dockerfile  README.md  Vesicle.h  main.cpp
Header Files/: Cell.h  Vesicle.h
Source Files/: main.cpp
include/: Cell.h  Vesicle.h  Visualizer.h
source/: main.cpp
